--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
     sdk: flutter
   intl: any
   provider: ^6.1.2
+  http: ^1.2.0
+  carousel_slider: ^5.0.0
+  shared_preferences: ^2.2.3
+  url_launcher: ^6.1.8
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
